[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "llmproxy"
version = "0.1.0"
description = "An intelligent load balancer and proxy for LLM APIs"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "LLMProxy Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "httpx",
    "openai",
    "requests",
    "pyyaml",
    "python-dotenv",
    "aiofiles",
    "structlog",
    "redis",
    "hiredis",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-xdist",
    "black==24.3.0",
    "flake8==7.0.0",
    "isort==5.13.2",
    "mypy==1.8.0",
    "types-PyYAML",
    "pre-commit",
]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-xdist",
]
lint = [
    "black==24.3.0",
    "flake8==7.0.0",
    "isort==5.13.2",
    "mypy==1.8.0",
    "types-PyYAML",
    "pre-commit",
]

[project.scripts]
llmproxy = "llmproxy.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/llmproxy"
Repository = "https://github.com/yourusername/llmproxy.git"
Issues = "https://github.com/yourusername/llmproxy/issues"

[tool.setuptools]
packages = ["llmproxy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["llmproxy*"]
exclude = ["fuzz_tests*", "tests*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["llmproxy"]
known_third_party = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "httpx",
    "openai",
    "redis",
    "pytest",
    "structlog",
    "requests",
]
skip_glob = ["*/migrations/*"]
ensure_newline_before_comments = true
float_to_top = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "redis.*",
    "hiredis.*",
    "structlog.*",
    "traitlets.*",
    "trio.*",
    "anyio.*",
    "dotenv.*",
    "httpcore.*",
    "uvicorn.*",
    "websockets.*",
    "fastapi.*",
    "orjson.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
